# agentcore-evals

./: .env.example  .gitignore  AGENTS.md  LEARNING_PLAN.md  README.md  pyproject.toml
docs/: architecture.md  cost-guardrails.md  deterministic-mock-registry.md  execution-role-baseline.md  hello-agent-loop.md  local-vs-agentcore.md  telemetry-compatibility.md  tool-contract-spec.md  trace-anatomy.md
evals/: __init__.py  harness.py  reporting.py
schemas/: capability-manifest.schema.json  dataset-projection.schema.json  eval-fixture-manifest.schema.json  eval-report.schema.json  execution-trace.schema.json  openweather-gateway.openapi.yaml  run-manifest.schema.json  run-summary.schema.json  tool-calling-dataset-manifest.schema.json  tool-calling-example.schema.json  tool-contract.schema.json  weather-tool.json
scripts/: compare_week4_weather_seams.py  compare_week_07_runs.py  export_week_08_fixtures.py  generate_tool_calling_corpus.py  generate_weather_projection_fixtures.py  judge_weather_calculator.py  probe_week_07_strands_evals.py  probe_week_07_telemetry.py  production_slice_workbench.py  run_week_07_projection.py  run_week_10_predeployment_evals.py  summarize_run.py  tool_calling_workbench.py  validate_contracts.py  validate_dataset.py  verify_gateway_weather_boundary.py  week4_weather_gateway.py  week_07_review_workbench.py
src/: contracts.py  dataset_projection.py  deterministic_mocks.py  execution_trace_validation.py  (+13 more)
weatheragent/app/weather_agent/: gateway_weather.py  main.py  pyproject.toml  weather_contract.py  weather_core.py  weather_tool.py
(+261 files in other folders)
