[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather_agent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "requests >= 2.32.0",
    "strands-agents >= 1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "jsonschema==4.26.0",
    "mcp-proxy-for-aws>=1.6.3",
    "strands-agents-evals==1.0.1",
    "strands-agents-tools>=0.8.3",
]
